# qimaptray

./: .gitmodules  CMakeLists.txt  README.md  connection.cpp  connection.h  imap.cpp  imap.h  qimaptray.cpp  qimaptray.man  qimaptray.qrc  status.cpp  status.h  tray.cpp  tray.h  waker.cpp  waker.h  webcam.cpp  webcam.h  webcam_dummy.cpp
